# healthckeckbot

./: .env.example  .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/models/: http_request_checker.rs  mod.rs  state.rs
