[package]
name = "healthcheckbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4"
teloxide = { version = "0.11", features = ["macros", "sqlite-storage"] }
log = "0.4"
dotenv = "0.15.0"
serde = "1.0.145"
